Updated demo to replicate behaviour with hcd

--- a/conn-config-template/cassandra_conn.properties
+++ b/conn-config-template/cassandra_conn.properties
@@ -23,7 +23,7 @@ topic.datagen-topic.kafka_sink.datagen.mapping=key=key, side=value.side, quantit
 # This setting cannot be provided if `cloud.secureConnectBundle` is provided, since this
 # information is part of the bundle's data.
 contactPoints=cassandra
-loadBalancing.localDc=datacenter1
+loadBalancing.localDc=dc1
 
 # The location of the cloud secure bundle used to connect to Datastax Astra.
 # If you are connecting to the cloud, these parameters need to be provided.
